<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/alpha_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/project_name"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/project_description"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:text="@string/project_description"
        app:layout_constraintEnd_toEndOf="@+id/alpha_title"
        app:layout_constraintStart_toStartOf="@+id/alpha_title"
        app:layout_constraintTop_toBottomOf="@+id/alpha_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alphas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/project_description"
        app:layout_constraintStart_toStartOf="@+id/project_description"
        app:layout_constraintTop_toBottomOf="@+id/project_description">

        <TextView
            android:id="@+id/customer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/customer"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/opportunity_button"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/opportunity"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_title" />

        <Button
            android:id="@+id/stakeholders_button"
            android:text="@string/stakeholders"
            android:textSize="10sp"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#4CAF50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customer_title" />

        <TextView
            android:id="@+id/solution_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/solution"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opportunity_button" />

        <Button
            android:id="@+id/requirements_button"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/requirements"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solution_title" />

        <Button
            android:id="@+id/software_system_button"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/software_system"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solution_title" />

        <TextView
            android:id="@+id/endeavor_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/endeavor"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requirements_button" />

        <Button
            android:id="@+id/work_button"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/work"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endeavor_title" />

        <Button
            android:id="@+id/team_button"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/team"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endeavor_title" />

        <Button
            android:id="@+id/way_of_working_button"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/way_of_working"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/work_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>