<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/alpha_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Название альфы"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stage_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/stage_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alpha_title" />

    <TextView
        android:id="@+id/stage_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/stage_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stage_number"
        app:layout_constraintTop_toBottomOf="@+id/alpha_title" />

    <TextView
        android:id="@+id/alpha_description"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:gravity="left"
        android:text="@string/question"
        app:layout_constraintEnd_toEndOf="@+id/alpha_title"
        app:layout_constraintStart_toStartOf="@+id/alpha_title"
        app:layout_constraintTop_toBottomOf="@+id/stage_title" />

    <Button
        android:id="@+id/else_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Не знаю"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/yes_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Да"
        app:layout_constraintBottom_toTopOf="@+id/else_button"
        app:layout_constraintEnd_toStartOf="@+id/no_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/no_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Нет"
        app:layout_constraintBottom_toTopOf="@+id/else_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes_button"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>